<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:adjustViewBounds="true"
            android:alpha="0.1"
            android:src="@drawable/backperm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:visibility="gone"
                android:id="@+id/image_permissioner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="100dp"
                android:minHeight="100dp" />

            <ir.sinadalvand.permissioner.SuperTextView
                android:id="@+id/text_permissioner_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/foo_permission"
                android:textAlignment="center"
                android:textColor="#3F3F3F"
                android:textStyle="bold" />

            <ir.sinadalvand.permissioner.SuperTextView
                android:id="@+id/text_permissioner_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="#7A7A7A"
                tools:text="@string/foo_persmission_des" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ir.sinadalvand.permissioner.SubmitButton
                    android:id="@+id/button_permissioner_later"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    app:buttonColor="#FFA000"
                    app:buttonText="@string/later" />


                <ir.sinadalvand.permissioner.SubmitButton
                    android:id="@+id/button_permissioner_allow"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    app:buttonText="@string/allow" />


            </LinearLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:visibility="gone"
                android:id="@+id/button_permissioner_check"
                app:buttonTint="@color/colorPrimary"
                android:layout_margin="5dp"
                android:text="@string/dontShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:visibility="invisible"
        tools:visibility="visible"
        android:id="@+id/Card_permissioner_Settings"
        app:cardCornerRadius="20dp"
        android:elevation="7dp"
        app:cardElevation="7dp"
        android:layout_width="50dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <RelativeLayout
            android:gravity="center|bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings_black_24dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


</android.support.constraint.ConstraintLayout>